--- a/templates/backoffice/question/browse.html.twig
+++ b/templates/backoffice/question/browse.html.twig
@@ -40,7 +40,7 @@
                 </tr>
             {% else %}
                 <tr>
-                    <td colspan="4">no records found</td>
+                    <td colspan="4">Pas de résultat.</td>
                 </tr>
             {% endfor %}
             </tbody>
