--- a/templates/backoffice/search/index.html.twig
+++ b/templates/backoffice/search/index.html.twig
@@ -36,7 +36,7 @@
             </tr>
         {% else %}
             <tr>
-                <td colspan="6">no records found</td>
+                <td colspan="6">Pas de résultat.</td>
             </tr>
         {% endfor %}
         </tbody>
