--- a/templates/partials/_nav.html.twig
+++ b/templates/partials/_nav.html.twig
@@ -4,7 +4,7 @@
     <a href="{{ path("default") }}"><img class="img" src="{{ asset('img/logo.png') }}"></a>
     </div>
 
-<nav class="navbar navbar-expand-xxl bg-body-tertiary">
+<nav class="navbar navbar-expand-xl bg-body-tertiary">
     <div class="container-fluid">
         <a class="navbar-brand title" href="{{ path("default") }}"> Kaamel'O'tt </a>
         
