--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,8 +1,6 @@
 body {
     font-family: 'Times New Roman', serif;
     background-image: url(../img/pexels-pixabay-221516.jpg) ;
-    /* height: 100vh; */
-    /* width:100vw; */
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;    
@@ -29,7 +27,6 @@ h1, h2, h3, h4, h5, h6, .title {
     width: 100%;
     display: flex;
     justify-content: center;
-    /* background-color: rgba(243, 245, 245, 0.6); */
     background-color: rgba(243, 245, 245, 0.6);
 }
 
@@ -108,6 +105,11 @@ figcaption {
     padding: 3px;
     text-align: center;
 }
+
+.iconono {
+    word-wrap: break-word;
+}
+
 
 .pagination {
     /* max-width: 100%; */
