Pagination on a character page

--- a/templates/frontoffice/season/read.html.twig
+++ b/templates/frontoffice/season/read.html.twig
@@ -25,7 +25,7 @@
                 <div id="flush-~{{ episode.id }}" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
                   <div class="accordion-body">
                         {% for quote in episode.quotes %}
-                            {% include 'partials/_card_quote.html.twig' %}        
+                            {% include 'partials/_card_sql.html.twig' %}        
                         {% endfor %}
                   </div>
                 </div>
