--- a/templates/frontoffice/quizz/read.html.twig
+++ b/templates/frontoffice/quizz/read.html.twig
@@ -22,7 +22,11 @@
         <div id="resultat-container">
             <div id="resultat">
                 <div id="score"></div>
+                <div id="profil"></div>
                 <div id="again"></div>
+                <div id="user">
+                    <input id="userId" value="{{app.user.id}}" style ="display: none">
+                </div>
             </div>
         </div>
         
