--- a/templates/partials/_nav.html.twig
+++ b/templates/partials/_nav.html.twig
@@ -66,7 +66,7 @@
 
             </ul>
             </li>
-
+            {% if is_granted("ROLE_USER") %}
             <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 Quizz
@@ -78,7 +78,7 @@
                 {% endfor %}
             </ul>
             </li>
-
+            {% endif %}
             <li class="nav-item">
             <a class="nav-link" aria-current="page" href="#">Favoris</a>
             </li>
