--- a/templates/partials/_card_dql.html.twig
+++ b/templates/partials/_card_dql.html.twig
@@ -21,7 +21,7 @@
                         {% endif %}
                     {% endfor %}
             <span class="ps-1">{{ quote.rating|round(1, 'floor')  }}</span>
-                  
+               
         </div>
 
     </div>
@@ -34,27 +34,26 @@
                
                 {# We check if the user is connected, because if not, he can't put quotes in favorite #}
                 {% if is_granted("ROLE_USER") %}
-                
+
                                 {% set isFavorite = false %}
                     {% for userFav in quote.users %}
                             {% if currentUser.getUser == userFav %}
                                 {% set isFavorite = true %}
                             {% endif %}
                     {% endfor %}
-                     
+                 
                     {% if isFavorite %}
-                       <a href="{{ path('user_remove_favorite_quote', {quoteId: quote.id}) }}"  class="bi bi-bookmark-heart-fill fs-1 d-flex justify-content-end"></a>
+                       <a href="{{ path('user_remove_favorite_quote', {quoteId: quote.id}) }}"  class="bi bi-bookmark-heart-fill fs-1 d-flex justify-content-end"></a> 
                     {% else %}
                        <a href="{{ path('user_add_favorite_quote', {quoteId: quote.id}) }}" class="bi bi-bookmark-heart fs-1 d-flex justify-content-end"></a>
                     {% endif %}
 
-                  
                 {% endif %}
                 </div>
             
             <footer class="blockquote-footer"> {{ quote.personage.name }},<cite title="Source Title"> <strong>{{ quote.episode.season.title }}</strong>, {{ quote.episode.title }}.</cite></footer>
                 {# We check if the user is connected, because if not, he can't rate the quote #}
-                {% if is_granted("ROLE_USER") %} 
+                {# {% if is_granted("ROLE_USER") %} 
 
                     {% set isRating = false %}
                     {% for userRate in quote.users %}
@@ -70,7 +69,7 @@
                        <a href="{{ path('user_add_rating_quote', {quoteId: quote.id})}}" class="btn btn-outline-secondary d-flex justify-content-end">Donner une Note à cette Citation</a>
                     {% endif %}
 
-                {% endif %}
+                {% endif %} #}
 
         </blockquote>
     </div>
