--- a/templates/partials/_nav.html.twig
+++ b/templates/partials/_nav.html.twig
@@ -79,7 +79,7 @@
 
             {% if is_granted("ROLE_USER") %}
             <li class="nav-item">
-            <a class="nav-link {{ (app.request.get('_route') is same as('app_favorites_user',  {"userId" : app.user.id})) ? 'active' : '' }}" aria-current="page" href="{{ path("app_favorites_user",  {"userId" : app.user.id }) }}">Favoris</a>
+            <a class="nav-link {{ (app.request.get('_route') is same as('app_favorites_user',  {"id" : app.user.id})) ? 'active' : '' }}" aria-current="page" href="{{ path("app_favorites_user",  {"id" : app.user.id }) }}">Favoris</a>
             </li>
             
 
