--- a/templates/frontoffice/user/formRating.html.twig
+++ b/templates/frontoffice/user/formRating.html.twig
@@ -15,7 +15,7 @@
        
             {{ form_row(formulaire.rating)}}
    
-        <a href=""><button type="submit" class="btn btn-outline-light" id="button_add_review">Ajouter la Note</button></a>
+        <button type="submit" class="btn btn-outline-light" id="button_add_review">Ajouter la Note</button>
             {{ form_end(formulaire) }}
         </div>
     </div>
