clean code on backoffice, modify entity with on delete - cascade and add new bdd

--- a/templates/backoffice/actor/browse.html.twig
+++ b/templates/backoffice/actor/browse.html.twig
@@ -16,7 +16,7 @@
         <thead>
             <tr>
                 <th>Id</th>
-                <th>Nom</th>
+                <th>Nom de l'acteur</th>
                 <th>Image</th>
                 <th>Description de l'image</th>
                 <th>Description de l'acteur</th>
