--- a/templates/backoffice/author/add.html.twig
+++ b/templates/backoffice/author/add.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Kaamel'O'tt - Author{% endblock %}
+{% block title %}Kaamel'O'tt - Auteurs{% endblock %}
 
 {% block body %}
 <main>
