--- a/templates/backoffice/author/browse.html.twig
+++ b/templates/backoffice/author/browse.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Kaamel'O'tt - Author{% endblock %}
+{% block title %}Kaamel'O'tt - Auteurs{% endblock %}
 
 {% block body %}
 
@@ -18,7 +18,7 @@
         <thead>
             <tr>
                 <th scope="col">Id</th>
-                <th scope="col">Name</th>
+                <th scope="col">Nom de l'auteur</th>
                 <th scope="col">actions</th>
             </tr>
         </thead>
