--- a/templates/backoffice/avatar/add.html.twig
+++ b/templates/backoffice/avatar/add.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Kaamel'O'tt - Avatar{% endblock %}
+{% block title %}Kaamel'O'tt - Avatars{% endblock %}
 
 {% block body %}
 <main>
