--- a/templates/backoffice/avatar/browse.html.twig
+++ b/templates/backoffice/avatar/browse.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Kaamel'O'tt - Avatar{% endblock %}
+{% block title %}Kaamel'O'tt - Avatars{% endblock %}
 
 {% block body %}
 <main>
@@ -16,8 +16,8 @@
             <thead>
                 <tr>
                     <th scope="col">Id</th>
-                    <th scope="col">Name</th>
-                    <th scope="col">Icon</th>
+                    <th scope="col">Nom de l'avatar</th>
+                    <th scope="col">Icone</th>
                     <th scope="col">actions</th>
                 </tr>
             </thead>
