--- a/templates/backoffice/episode/browse.html.twig
+++ b/templates/backoffice/episode/browse.html.twig
@@ -17,8 +17,8 @@
             <thead>
                 <tr>
                     <th scope="col">Id</th>
-                    <th scope="col">Title</th>
-                    <th scope="col">Number</th>
+                    <th scope="col">Titre de l'épisode</th>
+                    <th scope="col">Numéro de l'épisode</th>
                     <th scope="col">actions</th>
                 </tr>
             </thead>
