--- a/templates/backoffice/question/read.html.twig
+++ b/templates/backoffice/question/read.html.twig
@@ -14,12 +14,12 @@
             <thead>
                 <tr>
                     <th scope="col">Id</th>
-                    <th scope="col">Titre</th>
-                    <th scope="col">Answer1</th>
-                    <th scope="col">Answer2</th>
-                    <th scope="col">Answer3</th>
-                    <th scope="col">Answer4</th>
-                    <th scope="col">goodAnswer</th>
+                    <th scope="col">Titre de la question</th>
+                    <th scope="col">Réponse 1</th>
+                    <th scope="col">Réponse 2</th>
+                    <th scope="col">Réponse 3</th>
+                    <th scope="col">Réponse 4</th>
+                    <th scope="col">Bonne réponse</th>
                     <th scope="col">actions</th>
                 </tr>
             </thead>
@@ -35,10 +35,9 @@
                     <td>
                         <a href="{{ path('app_backoffice_question_edit', {'id': question.id}) }}" class="btn btn-warning">Modifier</a>
 
-
                         {% if is_granted("ROLE_ADMIN") %}
                             {{ include('backoffice/question/_delete_form.html.twig') }}
-                         {% endif %}
+                        {% endif %}
 
                     </td>
                 </tr>  
