--- a/templates/backoffice/season/edit.html.twig
+++ b/templates/backoffice/season/edit.html.twig
@@ -8,10 +8,9 @@
         <h1>Modification saison {{ season.id }}</h1>
     </div> 
     <div class="content"> 
-    <a href="{{ path('app_backoffice_season_browse') }}" class="btn btn-primary">retour à la liste</a>
+        <a href="{{ path('app_backoffice_season_browse') }}" class="btn btn-primary">retour à la liste</a>
 
-    {{ include('backoffice/season/_form.html.twig', {'button_label': 'Valider les modifications'}) }}
+        {{ include('backoffice/season/_form.html.twig', {'button_label': 'Valider les modifications'}) }}
     </div>
-
-    
+</main>
 {% endblock %}
