--- a/templates/backoffice/season/read.html.twig
+++ b/templates/backoffice/season/read.html.twig
@@ -16,7 +16,7 @@
             <thead>
                 <tr>
                     <th scope="col">Id</th>
-                    <th scope="col">Titre</th>
+                    <th scope="col">Titre de la saison</th>
                     <th scope="col">actions</th>
                 </tr>
             </thead>
