--- a/templates/backoffice/actor/read.html.twig
+++ b/templates/backoffice/actor/read.html.twig
@@ -11,38 +11,38 @@
 
     <div class="content">
 
-    <a href="{{ path('app_backoffice_actors_browse') }}" class="btn btn-primary">Retour à la liste</a>
+        <a href="{{ path('app_backoffice_actors_browse') }}" class="btn btn-primary">Retour à la liste</a>
 
-    <table class="table table-striped">
-        <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ actor.id }}</td>
-            </tr>
-            <tr>
-                <th>Nom</th>
-                <td>{{ actor.name }}</td>
-            </tr>
-            <tr>
-                <th>Image</th>
-                <td>{{ actor.picture }}</td>
-            </tr>
-            <tr>
-                <th>Description de l'image</th>
-                <td>{{ actor.descriptionPicture }}</td>
-            </tr>
-            <tr>
-                <th>Description de l'acteur</th>
-                <td>{{ actor.description }}</td>
-            </tr>
-        </tbody>
-    </table>
+        <table class="table table-striped">
+            <tbody>
+                <tr>
+                    <th>Id</th>
+                    <td>{{ actor.id }}</td>
+                </tr>
+                <tr>
+                    <th>Nom de l'acteur</th>
+                    <td>{{ actor.name }}</td>
+                </tr>
+                <tr>
+                    <th>Image</th>
+                    <td>{{ actor.picture }}</td>
+                </tr>
+                <tr>
+                    <th>Description de l'image</th>
+                    <td>{{ actor.descriptionPicture }}</td>
+                </tr>
+                <tr>
+                    <th>Description de l'acteur</th>
+                    <td>{{ actor.description }}</td>
+                </tr>
+            </tbody>
+        </table>
 
-    <a href="{{ path('app_backoffice_actor_edit', {'id': actor.id}) }}" class="btn btn-warning">Modifier</a>
+        <a href="{{ path('app_backoffice_actor_edit', {'id': actor.id}) }}" class="btn btn-warning">Modifier</a>
 
-    {% if is_granted("ROLE_ADMIN") %}
-        {{ include('backoffice/actor/_delete_form.html.twig') }}
-    {% endif %}
+        {% if is_granted("ROLE_ADMIN") %}
+            {{ include('backoffice/actor/_delete_form.html.twig') }}
+        {% endif %}
 
     </div>
 
