--- a/templates/backoffice/author/edit.html.twig
+++ b/templates/backoffice/author/edit.html.twig
@@ -1,22 +1,18 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Kaamel'O'tt - Author{% endblock %}
+{% block title %}Kaamel'O'tt - Auteurs{% endblock %}
 
 {% block body %}
 <main>
 
     <div class="main-content">
-    <h1>Modifier un auteur</h1>
+        <h1>Modifier un auteur</h1>
     </div>
 
     <div class="content">
-    <a href="{{ path('app_backoffice_author_browse') }}" class="btn btn-primary">retour à la liste</a>
+        <a href="{{ path('app_backoffice_author_browse') }}" class="btn btn-primary">retour à la liste</a>
 
-    {{ include('backoffice/author/_form.html.twig', {'button_label': 'Valider les modifications'}) }}
-
-    
-    
-
+        {{ include('backoffice/author/_form.html.twig', {'button_label': 'Valider les modifications'}) }}
     </div>
 </main>
 {% endblock %}
