--- a/templates/backoffice/avatar/read.html.twig
+++ b/templates/backoffice/avatar/read.html.twig
@@ -1,39 +1,36 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Kaamel'O'tt - Avatar{% endblock %}
+{% block title %}Kaamel'O'tt - Avatars{% endblock %}
 
 {% block body %}
- <main>
-    
+<main>
     <div class="main-content">
         <h1>Avatars</h1>
     </div>
-    
     <div class="content">
         <a href="{{ path('app_backoffice_avatar_browse') }}" class="btn btn-primary">Retour à la liste</a>
-    <table class="table table-striped">
-        <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ avatar.id }}</td>
-            </tr>
-            <tr>
-                <th>Name</th>
-                <td>{{ avatar.name }}</td>
-            </tr>
-            <tr>
-                <th>Icon</th>
-                <td>{{ avatar.icon }}</td>
-            </tr>
-        </tbody>
-    </table>
+        <table class="table table-striped">
+            <tbody>
+                <tr>
+                    <th>Id</th>
+                    <td>{{ avatar.id }}</td>
+                </tr>
+                <tr>
+                    <th>Nom de l'avatar</th>
+                    <td>{{ avatar.name }}</td>
+                </tr>
+                <tr>
+                    <th>Icone</th>
+                    <td>{{ avatar.icon }}</td>
+                </tr>
+            </tbody>
+        </table>
 
-
-
-    <a href="{{ path('app_backoffice_avatar_edit', {'id': avatar.id}) }}" class="btn btn-warning">Modifier</a>
+        <a href="{{ path('app_backoffice_avatar_edit', {'id': avatar.id}) }}" class="btn btn-warning">Modifier</a>
 
         {% if is_granted("ROLE_ADMIN") %}
             {{ include('backoffice/avatar/_delete_form.html.twig') }}
-         {% endif %}
-
+        {% endif %}
+    </div>
+</main>
 {% endblock %}
