--- a/templates/backoffice/personage/read.html.twig
+++ b/templates/backoffice/personage/read.html.twig
@@ -6,47 +6,44 @@
 
 <main>
     <div class="main-content">
-    <h1>Fiche personnage</h1>
+        <h1>Fiche personnage</h1>
     </div>
 
-     <div class="content">
-    <a href="{{ path('app_backoffice_personage_browse') }}"class="btn btn-primary">Retour à la liste</a>
+    <div class="content">
+        <a href="{{ path('app_backoffice_personage_browse') }}"class="btn btn-primary">Retour à la liste</a>
 
-    <table class="table">
-        <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ personage.id }}</td>
-            </tr>
-            <tr>
-                <th>Nom</th>
-                <td>{{ personage.name }}</td>
-            </tr>
-            <tr>
-                <th>Image</th>
-                <td>{{ personage.picture }}</td>
-            </tr>
-            <tr>
-                <th>Description de l'image</th>
-                <td>{{ personage.descriptionPicture }}</td>
-            </tr>
-            <tr>
-                <th>Description du personnage</th>
-                <td>{{ personage.description }}</td>
-            </tr>
-        </tbody>
-    </table>
+        <table class="table">
+            <tbody>
+                <tr>
+                    <th>Id</th>
+                    <td>{{ personage.id }}</td>
+                </tr>
+                <tr>
+                    <th>Nom du personnage</th>
+                    <td>{{ personage.name }}</td>
+                </tr>
+                <tr>
+                    <th>Image</th>
+                    <td>{{ personage.picture }}</td>
+                </tr>
+                <tr>
+                    <th>Description de l'image</th>
+                    <td>{{ personage.descriptionPicture }}</td>
+                </tr>
+                <tr>
+                    <th>Description du personnage</th>
+                    <td>{{ personage.description }}</td>
+                </tr>
+            </tbody>
+        </table>
 
-    
+        <a href="{{ path('app_backoffice_personage_edit', {'id': personage.id}) }}"class="btn btn-warning">Modifier</a>
 
-    <a href="{{ path('app_backoffice_personage_edit', {'id': personage.id}) }}"class="btn btn-warning">Modifier</a>
-
-    {% if is_granted("ROLE_ADMIN") %}
-        {{ include('backoffice/personage/_delete_form.html.twig') }}
-     {% endif %}
+        {% if is_granted("ROLE_ADMIN") %}
+            {{ include('backoffice/personage/_delete_form.html.twig') }}
+        {% endif %}
 
     </div>
-
 </main>
 
 {% endblock %}
