--- a/templates/backoffice/question/browse.html.twig
+++ b/templates/backoffice/question/browse.html.twig
@@ -4,7 +4,6 @@
 
 {% block body %}
 <main>
-    
     <div class="main-content">
         <h1>Liste des Questions</h1>
     </div>
@@ -14,12 +13,12 @@
             <thead>
                 <tr>
                     <th scope="col">Id</th>
-                    <th scope="col">Title</th>
-                    <th scope="col">Answer1</th>
-                    <th scope="col">Answer2</th>
-                    <th scope="col">Answer3</th>
-                    <th scope="col">Answer4</th>
-                    <th scope="col">GoodAnswer</th>
+                    <th scope="col">Titre de la question</th>
+                    <th scope="col">Réponse 1</th>
+                    <th scope="col">Réponse 2</th>
+                    <th scope="col">Réponse 3</th>
+                    <th scope="col">Réponse 4</th>
+                    <th scope="col">Bonne réponse</th>
                     <th scope="col">actions</th>
                 </tr>
             </thead>
@@ -40,7 +39,7 @@
                 </tr>
             {% else %}
                 <tr>
-                    <td colspan="4">Pas de résultat.</td>
+                    <td colspan="4">Pas de question trouvée !</td>
                 </tr>
             {% endfor %}
             </tbody>
