--- a/templates/backoffice/quizz/read.html.twig
+++ b/templates/backoffice/quizz/read.html.twig
@@ -6,33 +6,32 @@
 <main>
 
     <div class="main-content">
-        <h1>Fiche de quizz</h1>
+        <h1>Fiche du quizz</h1>
     </div>
 
     <div class="content">
 
-    <a href="{{ path('app_backoffice_quizz_browse') }}" class="btn btn-primary">Retour à la liste</a>
+        <a href="{{ path('app_backoffice_quizz_browse') }}" class="btn btn-primary">Retour à la liste</a>
 
-    <table class="table table-striped">
-        <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ quizz.id }}</td>
-            </tr>
-            <tr>
-                <th>Titre</th>
-                <td>{{ quizz.title }}</td>
-            </tr>
-        </tbody>
-    </table>
+        <table class="table table-striped">
+            <tbody>
+                <tr>
+                    <th>Id</th>
+                    <td>{{ quizz.id }}</td>
+                </tr>
+                <tr>
+                    <th>Titre du quizz</th>
+                    <td>{{ quizz.title }}</td>
+                </tr>
+            </tbody>
+        </table>
 
-    <a href="{{ path('app_backoffice_quizz_edit', {'id': quizz.id}) }}" class="btn btn-warning">Modifier</a>
+        <a href="{{ path('app_backoffice_quizz_edit', {'id': quizz.id}) }}" class="btn btn-warning">Modifier</a>
 
-    {% if is_granted("ROLE_ADMIN") %}
-        {{ include('backoffice/quizz/_delete_form.html.twig') }}
-    {% endif %}  
+        {% if is_granted("ROLE_ADMIN") %}
+            {{ include('backoffice/quizz/_delete_form.html.twig') }}
+        {% endif %}  
 
     </div>
-
 </main>
 {% endblock %}
