--- a/templates/frontoffice/home/index.html.twig
+++ b/templates/frontoffice/home/index.html.twig
@@ -67,7 +67,7 @@
                 </div>
             
             <footer class="blockquote-footer"> {{ quote.name }},<cite title="Source Title"> <strong>{{ quote.season }}</strong>, {{ quote.episode }}.</cite></footer>
-             <a href="{{ path('user_add_rating_quote', {quoteId: quote.id})}}" class="btn btn-outline-secondary d-flex justify-content-end">Donner une Note à la Citation</a>
+             {# <a href="{{ path('user_add_rating_quote', {quoteId: quote.id})}}" class="btn btn-outline-secondary d-flex justify-content-end">Donner une Note à la Citation</a> #}
         </blockquote>
     </div>
 </div>
